[gd_scene load_steps=6 format=3 uid="uid://dgieeaonogs84"]

[ext_resource type="Script" path="res://UI/Inventory/Shop Inventory/shop_inventory_interface.gd" id="1_e7tcy"]
[ext_resource type="PackedScene" uid="uid://b2tnm3jrgkqan" path="res://UI/Inventory/inventory_interface.tscn" id="2_6o2uq"]
[ext_resource type="Script" path="res://Resources/Inventories/inventory.gd" id="3_f8yr3"]

[sub_resource type="Resource" id="Resource_wxmu5"]
resource_local_to_scene = true
resource_name = "BuyInv"
script = ExtResource("3_f8yr3")
items = Array[Resource("res://Resources/Items/item.gd")]([])
num_slots = 12

[sub_resource type="Resource" id="Resource_81a11"]
resource_local_to_scene = true
resource_name = "SellInv"
script = ExtResource("3_f8yr3")
items = Array[Resource("res://Resources/Items/item.gd")]([])
num_slots = 12

[node name="ShopInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7tcy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayerInv" parent="CenterContainer/HBoxContainer" instance=ExtResource("2_6o2uq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
title = "Your Inventory"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BuyInv" parent="CenterContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_6o2uq")]
unique_name_in_owner = true
layout_mode = 2
inventory = SubResource("Resource_wxmu5")
title = "Buy"
inv_source = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="LabelGold" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "gold: 00000"

[node name="LabelTradeValue" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "trade: +00000"

[node name="SellInv" parent="CenterContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_6o2uq")]
unique_name_in_owner = true
layout_mode = 2
inventory = SubResource("Resource_81a11")
title = "Sell"
inv_source = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ButtonCancel" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Cancel"

[node name="ButtonEndTransaction" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "End transaction"

[node name="VSeparator2" type="VSeparator" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="ShopInv" parent="CenterContainer/HBoxContainer" instance=ExtResource("2_6o2uq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
inventory = null
title = "Shop Inventory"
inv_source = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/ButtonCancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/ButtonEndTransaction" to="." method="_on_button_end_transaction_pressed"]
